# CGM-Agent

./: .gitignore  AGENTS.md  AUDIT-2026-06-06-蓝图实现差异审计.md  BASELINE_STATUS.md  CLAUDE.md  PRD-SUPPLEMENT.md  README.md  SOUL.md  pyproject.toml
.claude/: settings.json  settings.local.json
.specify/: feature.json  init-options.json  integration.json
docs/: AUDIT-2026-06-07-IMPLEMENTATION-REVIEW.md  AUDIT-2026-06-07-持续审计闭环-R1-R6.md  BACKLOG.md  BUILD-REPORT-2026-06-06-auto-kb-pipeline.md  BUILD-REPORT-2026-06-07-kb-correction.md  DECISION_LOG.md  DEVELOPMENT-PLAN-2026-06-07-CURRENT.md  MEM-ARCH.md  MID-TERM-CORRECTION-REPORT-2026-06-06.md  REFACTOR-PLAN-2026-06-06.md  STAGE2-HERMES-HANDOFF.md  STATUS-REPORT-2026-06-06-NEXT-PHASE.md  STATUS-REPORT-2026-06-06.md  STATUS-REPORT-2026-06-07.md  STRATEGY-VALIDATION-2026-06-07.md
eval/: README.md
knowledge/: authoritative_kb.json
prompts/: README.md
schemas/: README.md
scripts/: eval_rag_hit3.py  kb_validate.sh  migrate_legacy_data.py
tests/: test_api.py  test_cgm_analytics.py  test_cgm_domain_models.py  test_cgm_importer.py  test_cgm_normalizer.py  test_cgm_repository.py  test_citation_guard.py  test_cli.py  test_config.py  test_consolidation.py  test_decision_log_citations.py  test_dexcom_auth.py  test_dexcom_client.py  test_dexcom_mapper.py  test_dexcom_sync.py  test_e2e_memory_recall.py  test_e2e_report_memory_recall.py  test_eval_rag.py  test_event_tool_service.py  test_event_tools.py  test_f4_companion_narrative.py  test_g0_g7_e2e.py  test_glucose_events.py  test_hermes_cli_platform.py  test_hermes_e2e.py  (+39 more)
(+205 files in other folders)
